crates/hdk/tests/macros/entry_def_registration_bad_opts_types.stderr
error: Unexpected literal type `int` at name
 --> tests/macros/entry_def_registration_bad_opts_types.rs:5:24
  |
5 |     #[entry_type(name = 55)]
  |                        ^^
